# heros

./: .gitignore  HEROS_Demo_Notebook.ipynb  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_package.yml  tests.yml
dev/: DTToRules.ipynb  HEROS_Noise_Notebook.ipynb
evaluation/datasets/full/: B_gametes_uni_4add_L_1_H_0.4_EDM-2_01.csv  D_gametes_2way_epistasis_L_2_H_0.4_EDM-2_01.csv  E_gametes_2way_epi_2het_L_2_H_0.4_EDM-2_01.csv
evaluation/datasets/unit_testing/: Multiplexer6.csv  Multiplexer6Text.csv  Multiplexer6_NA.csv  Multiplexer6_feature_type_mix.csv  Multiplexer6_feature_type_mix_NA.csv  Multiplexer6_multiclass.csv  Multiplexer6_quant_outcome.csv
evaluation/experiments/: job_heros_hpc.py  job_heros_sum_hpc.py  job_heros_table_hpc.py  run_commands.txt  run_heros_hpc.py  run_heros_sum_hpc.py  run_heros_table_hpc.py
evaluation/experiments/cv_partitioning/: job_CV_Partitioner.py  run_CV_Partitioner.py
evaluation/experiments/exstracs/: job_exstracs_hpc.py  run_exstracs_hpc.py
evaluation/experiments/multisurf/: job_multisurf_hpc.py  run_multisurf_hpc.py
evaluation/sim/: Multiplexer_Data_Generation_Notebook.ipynb
src/: test_heros.py
src/skheros/: __init__.py  heros.py
src/skheros/methods/: data_mange.py  feature_tracking.py  model.py  model_pareto_fitness.py  model_population.py  rule.py  (+9 more)
test/datasets/: A_gametes_univariate_L_1_H_0.4_EDM-2_01.csv  C_gametes_uni_4het_L_1_H_0.4_EDM-2_01.csv  F_gametes_3way_epistasis_L_3_H_0.2_EDM-2_01.csv  Multiplexer37.csv  Multiplexer6_NA.csv  Multiplexer6_quantitative.csv  Multiplexer6_quantitative_outcome.csv
tests/: test_heros.py
(+4 files in other folders)
